<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".elvis.notifications.NotificationsSetup">

    <FrameLayout
        android:layout_width="523dp"
        android:layout_height="217dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" >

        <TextView
            android:id="@+id/text_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="8dp"
            android:text="@string/reminders_heading"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.435" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="306dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:autofillHints="Reminder name"
            android:background="@android:color/transparent"
            android:hint="@string/task_title"
            android:inputType="text"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:autofillHints="Reminder name"
            android:hint="@string/enter_task_title"
            android:inputType="text"
            android:textSize="16sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:autofillHints="Reminder name"
            android:background="@android:color/transparent"
            android:hint="@string/reminder_time"
            android:inputType="text"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:autofillHints="Reminder name"
            android:hint="@string/select_reminder_time"
            android:inputType="text"
            android:textSize="16sp" />

        <EditText
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:autofillHints="Reminder name"
            android:background="@android:color/transparent"
            android:hint="@string/note"
            android:inputType="text"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@android:color/transparent"
                android:hint="@string/etc" />
        </com.google.android.material.textfield.TextInputLayout>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:autofillHints="Reminder name"
            android:background="@android:color/transparent"
            android:hint="@string/reminder_frequency"
            android:inputType="text"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="14dp">

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <!-- First Row -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio_one_time"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/one_time" />

                    <RadioButton
                        android:id="@+id/radio_daily"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/daily" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio_weekly"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/weekly" />

                    <RadioButton
                        android:id="@+id/radio_monthly"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/monthly" />
                </LinearLayout>

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="6dp">

            <Button
                android:id="@+id/button_save"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="99dp"
                android:layout_height="48dp"
                android:layout_marginEnd="18dp"
                android:backgroundTint="@color/white"
                android:padding="10dp"
                android:text="@string/save"
                android:textColor="#000000"
                app:strokeColor="#74FFFFFF" />

            <Button
                android:id="@+id/button_clear"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="99dp"
                android:layout_height="48dp"
                android:padding="8dp"
                android:text="@string/clear"
                android:textColor="#000000" />

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>