<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".katiana.registration.RegistrationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <!-- Profile Picture -->

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profileImage"
            android:layout_width="131dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:background="@drawable/circular_background"
            android:scaleType="centerCrop"
            android:src="@drawable/profile_placeholder"
            app:strokeColor="@color/white"
            app:strokeWidth="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Full Name -->
        <TextView
            android:id="@+id/fullNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="124dp"
            android:text="@string/fullNameLabel"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/fullNameInput"
            android:layout_width="0dp"
            android:autofillHints="name"
            android:inputType="textPersonName"
            android:layout_height="45dp"
            android:background="@drawable/edit_text_background"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:padding="8dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toBottomOf="@id/fullNameLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" />

        <!-- Email -->
        <TextView
            android:id="@+id/emailLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emailLabel"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/fullNameInput"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="0dp"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress"
            android:layout_height="45dp"
            android:background="@drawable/edit_text_background"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:padding="8dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toBottomOf="@id/emailLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" />

        <!-- Institution Name -->
        <TextView
            android:id="@+id/institutionNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/institutionNameLabel"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/emailInput"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/institutionNameInput"
            android:layout_width="0dp"
            android:autofillHints="organizationName"
            android:inputType="text"
            android:layout_height="45dp"
            android:background="@drawable/edit_text_background"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:padding="8dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toBottomOf="@id/institutionNameLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" />

        <!-- Qualification -->
        <TextView
            android:id="@+id/qualificationLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qualificationLabel"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/institutionNameInput"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/qualificationInput"
            android:layout_width="0dp"
            android:autofillHints="qualifications"
            android:inputType="text"
            android:layout_height="45dp"
            android:background="@drawable/edit_text_background"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:padding="8dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toBottomOf="@id/qualificationLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" />

        <!-- Password -->
        <TextView
            android:id="@+id/passwordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passwordLabel"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/qualificationInput"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="0dp"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:layout_height="45dp"
            android:background="@drawable/edit_text_background"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:padding="8dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toBottomOf="@id/passwordLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" />

        <!-- Register Button -->
        <Button
            android:id="@+id/registerButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_register"
            app:layout_constraintTop_toBottomOf="@id/passwordInput"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="24dp" />

        <!-- Account Already Exists -->
        <TextView
            android:id="@+id/accountAlreadyExist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:autoLink="none"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/already_have_account"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registerButton" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="60dp"
            android:layout_height="0dp"
            android:backgroundTint="@android:color/white"
            android:clickable="true"
            app:srcCompat="@drawable/camera_upload_photo"
            android:scaleType="center"
            android:contentDescription="@string/todo"
            android:focusable="true"
            android:src="@drawable/camera_upload_photo"
            app:layout_constraintBottom_toBottomOf="@+id/profileImage"
            app:layout_constraintEnd_toEndOf="@+id/profileImage" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>